# osmpbf

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING.txt  README.md  abstractosmprimitive.h  abstractprimitiveadaptor.h  abstractprimitiveinputadaptor.cpp  abstractprimitiveinputadaptor.h  abstractprimitiveoutputadaptor.cpp  abstractprimitiveoutputadaptor.h  blobdata.h  blobfile.cpp  blobfile.h  common.h  fielditerator.h  filter.cpp  filter.h  inode.cpp  inode.h  iprimitive.h  irelation.cpp  irelation.h  iway.cpp  iway.h  main.cpp  onode.cpp  onode.h  oprimitive.h  osmblob.proto  osmblobdata.h  osmblobfile.cpp  osmblobfile.h  osmdatacontroller.cpp  osmdatacontroller.h  osmfile.cpp  osmfile.h  osmfilein.cpp  osmfilein.h  osmfileout.h  (+21 more)
example/: dumppbf.cpp
examples/: CMakeLists.txt  dumppbf.cpp  dumppbf_parsehelpers.cpp  filteredCount.cpp  osmpbf_dump.cpp
osmpbf/: CMakeLists.txt  abstractnodeinputadaptor.cpp  abstractprimitiveinputadaptor.cpp  abstractprimitiveoutputadaptor.cpp  blobdata.h  blobfile.cpp  common.h  dataindex.cpp  fileio.cpp  fileio.h  filter.cpp  iinfo.cpp  inode.cpp  io.cpp  io.h  iprimitive.h  irelation.cpp  iway.cpp  net.cpp  nodestreaminputadaptor.cpp  onode.cpp  osmblob.pb.cc  osmblob.pb.h  osmblob.proto  osmfile.h  osmfilein.cpp  osmformat.pb.cc  osmformat.pb.h  osmformat.proto  oway.cpp  pbistream.cpp  primitiveblockinputadaptor.cpp  primitiveblockoutputadaptor.cpp  relationinputadaptor.cpp  stringtable_fwd.h  typelimits.h  wayinputadaptor.cpp  xmlconverter.cpp
osmpbf/include/osmpbf/: abstractnodeinputadaptor.h  abstractprimitiveinputadaptor.h  abstractprimitiveoutputadaptor.h  blobfile.h  common.h  common_input.h  dataindex.h  fileio.h  filter.h  iinfo.h  inode.h  iprimitive.h  irelation.h  iway.h  memberstreaminputadaptor.h  net.h  nodestreaminputadaptor.h  onode.h  osmfile.h  osmfilein.h  osmfileout.h  oway.h  parsehelpers.h  pbf_prototypes.h  pbistream.h  primitiveblockinputadaptor.h  primitiveblockoutputadaptor.h  relationinputadaptor.h  stringtable_fwd.h  typelimits.h  wayinputadaptor.h  xmlconverter.h
